# MPCS-51052-Project

./: README.md  pyproject.toml
organizer/: __init__.py  cli.py  condition_evaluator.py  dsl_parser.py  file_executor.py  file_types.py  file_watcher.py  gui.py  models.py  rule_engine.py  rule_manager.py  scan.py  scheduler.py  ui_rules.py
tests/: test_condition_evaluator.py  test_dsl_parser.py  test_file_executor.py  test_file_types.py  test_rule_engine.py  test_rule_manager.py  test_scan.py  test_ui_rules.py
