[project]
name = "smart-file-organizer"
version = "0.1.0"
description = "CLI/TUI file organizer with a custom rule DSL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.1.9",
    "rich>=13.7.0",
    "watchdog>=4.0.0",
    "typer>=0.12.0",
]

[project.scripts]
organizer = "organizer.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["organizer"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["organizer", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["organizer"]

[tool.ruff.lint.per-file-ignores]
"organizer/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
packages = ["organizer"]
strict = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["lark.*", "watchdog.*", "watchdog.events", "typer.*", "rich.*", "click.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
